--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,20 @@
 <div class="contact-container">
     <mat-card class="example-card">
-        <mat-card-header>
+        <!-- <mat-card-header>
             <div mat-card-avatar class="resume-header-image"></div>
             <mat-card-title>Do you want a ride?</mat-card-title>
             <mat-card-subtitle>@coffeeandcode</mat-card-subtitle>            
-        </mat-card-header>    
-        <img mat-card-image src="https://res.cloudinary.com/peruve/image/upload/q_auto:best/v1516918073/Liberty-Walk-Ferrari-458-3_sbn90l.jpg" alt="Photo of surfboard">      
+        </mat-card-header>     -->
+        <mat-card-content>
+
+                <mat-list>
+                        <mat-list-item> 
+                                <mat-icon>email</mat-icon> &nbsp; <a style="text-decoration: none; color: #ff5623; text-shadow: 4px 2px 4px #ffbca8;" href="mailto:bmxandcode@gmail.com?Subject=Hola" target="_blank">bmxandcode@gmail.com</a>
+                        </mat-list-item>
+                </mat-list>                    
+
+        </mat-card-content>
+        <!-- <img mat-card-image src="https://res.cloudinary.com/peruve/image/upload/q_auto:best/v1516918073/Liberty-Walk-Ferrari-458-3_sbn90l.jpg" alt="Photo of surfboard">       -->
     </mat-card>
 </div>
       
