improve my resume

--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -44,13 +44,47 @@
         </mat-expansion-panel>   
 
         <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <mat-icon>business_center</mat-icon>
+                <span class="resume-select-panel-title">Experience</span>                             
+              </mat-panel-title>
+              <mat-panel-description>
+                <!-- <span class="resume-select-description">$$$$$$$</span> -->
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+        
+            <div style="margin-bottom: 15px;">
+                <b>Full Stack Engineer - PeruVe.com,</b> Develop a Job board and Currency Exchange Platform for Venezuelans in Perú. The main technologies that will be used are Angular 5, Firebase, Algolia, ExpressJS. [ene 2018 - present]
+            </div>
+            <div style="margin-bottom: 15px;">
+               <b>Web UI Developer - NaisHair.com,</b> Develop new features, resolve issues, mostly in the frontend, using JS, CSS, PHP 7, Wordpress. [dic 2017 - present]
+            </div>           
+            <div style="margin-bottom: 15px;">
+              <b>Laboratory Assistant - Universidad Pedagógica Experimental Libertador - IPM,</b> Technical support for the English and IT education departments and programs, a Web developer in the university developers team.  [ene 2011 - dic 2017]
+            </div>
+            <div style="margin-bottom: 15px;">
+                <b>Full Stack Developer - MercadoChevere.com,</b> Develop a website to publish goods and services by small business owners and individuals. I write all front and back-end code. Is was build with Angular 1.5, Firebase, Algolia, Cloudinary, Express.  [feb 2008 - present]
+            </div>
+            <div style="margin-bottom: 15px;">
+                <b>Salesman, Assistant and Technical Support,</b> Kavak Group C.A - Computer Store - RIF: J-31636746-0 [dic 2005 - mar 2006]
+            </div>
+            <div>
+                <b>Assistant of cylinder head mechanic - Tiuna S.A - Rectification of Motors.</b> Address: Av. Alirio Ugarte Pelayo Galpón Tiuna, Sector Bajo Guarapiche, Maturin, Monagas, Venezuela.  Phone:  +58 (0291) 6430524. [dic 2003 - jul 2004]
+            </div>
+           
+
+        </mat-expansion-panel>
+  
+
+        <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
               <mat-icon>school</mat-icon>
                <span class="resume-select-panel-title">Education</span>
             </mat-panel-title>
             <mat-panel-description>
-              <span class="resume-select-description">Very formal</span>
+              <!-- <span class="resume-select-description">Very formal</span> -->
             </mat-panel-description>
           </mat-expansion-panel-header>
       
@@ -79,28 +113,30 @@
           </div>           
   
         </mat-expansion-panel>
+
+
+
+
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <mat-icon>business_center</mat-icon>
-              <span class="resume-select-panel-title">Formal Jobs</span>                             
+                <mat-icon>translate</mat-icon>
+              <span class="resume-select-panel-title">Languages</span>               
             </mat-panel-title>
             <mat-panel-description>
-              <!-- <span class="resume-select-description">$$$$$$$</span> -->
             </mat-panel-description>
           </mat-expansion-panel-header>
-      
-          <div>
-            <b>(2011 - 2017) Laboratory assistant</b> in the english department of the Universidad Pedagógica Experimental Libertador
+
+          <div style="margin-bottom: 15px;">
+              <b>Spanish:</b> Native competence.
           </div>
           <div>
-            <b>(2005 - 2006) Assistant and Technical Support</b> - 3 months - Kavak Group Computer Store, C.A. Rif.: J-31636746-0
+              <b>English:</b> Basic professional competence.
           </div>           
-          <div>
-            <b>(2003 - 2004)  Assistant Mechanical</b> - 7 months - Tiuna S.A - Rectification of Motors.
-          </div>
-          
+
         </mat-expansion-panel>
+
+
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
