--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,8 @@
       <a mat-list-item routerLink="/my-resume" (click)="closeSidenav()" > My Resume </a>
       <a mat-list-item routerLink="/contact" (click)="closeSidenav()" > Contact </a>
 
+      <a mat-list-item routerLink="/account" (click)="closeSidenav()" > Account  </a>
+
       <div *ngIf="user | async; let user; else showLoginURL">
           <a mat-list-item appRgLogout (click)="closeSidenav()" > Logout </a>
       </div> 
@@ -77,7 +79,6 @@
     <router-outlet></router-outlet>
 
     
-
   </mat-sidenav-content>
 </mat-sidenav-container>
 
