--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,32 @@
 <div class="login-container">
-    <mat-card>
-        <app-sign-in></app-sign-in>
-    </mat-card>
-    
-     <br> 
-    
-    <mat-card>
-      <app-auth-login></app-auth-login>
-    </mat-card>
-    
-    <br> 
-    
-    <mat-card>
-        <div *ngIf="user | async; else noSocialLogins" ></div>
-        <ng-template #noSocialLogins>
-            <mat-list>
-                <mat-list-item><app-twitter-auth></app-twitter-auth> </mat-list-item>
-                <mat-list-item> <app-google-auth></app-google-auth> </mat-list-item>
-                <mat-list-item> <app-facebook-auth></app-facebook-auth> </mat-list-item>
-                <mat-list-item> <app-github-auth></app-github-auth> </mat-list-item>
-            </mat-list>    
-        </ng-template>
-    </mat-card>
-    
-    <br> 
-    
+
+    <mat-tab-group>
+        <mat-tab label="Firebase Login">
+            <app-auth-login></app-auth-login>
+        </mat-tab>
+        <mat-tab label="Firebase Sign In">
+            <app-sign-in></app-sign-in>
+        </mat-tab>
+        <mat-tab label="Firebase Social Login">
+            <div *ngIf="user | async; else noSocialLogins" ></div>
+            <ng-template #noSocialLogins>
+                <mat-list>
+                    <mat-list-item><app-twitter-auth></app-twitter-auth> </mat-list-item>
+                    <mat-list-item> <app-google-auth></app-google-auth> </mat-list-item>
+                    <mat-list-item> <app-facebook-auth></app-facebook-auth> </mat-list-item>
+                    <mat-list-item> <app-github-auth></app-github-auth> </mat-list-item>
+                </mat-list>    
+            </ng-template>
+        </mat-tab>
+    </mat-tab-group>
+  
+<!--     
     <mat-card>
       <h3>Logout:</h3>
       <button *ngIf="user | async;" mat-raised-button appRgLogout>Logout</button>
     </mat-card>
-    
+-->
+
     <br> 
     
     <mat-card>
@@ -47,43 +44,3 @@
     </mat-card>
     
 </div>
-
-
-<!-- <div>
-    <app-auth-state [user]="user" ></app-auth-state>
-</div>
-
-<mat-card>
-    <mat-card-title>Inicio de sesión</mat-card-title>
-    <mat-card-content>
-        <mat-tab-group>
-            <mat-tab label="Tengo una cuenta">
-                
-                <br>
-                <app-password-auth></app-password-auth>                 
-
-
-            </mat-tab>
-            <mat-tab label="Registro">
-                <br>
-                <app-password-auth-sign-in></app-password-auth-sign-in>  
-
-            </mat-tab>
-            <mat-tab label="Recuperar cuenta">Recovery</mat-tab>            
-        </mat-tab-group>
-             
-        <hr>
-
-        <mat-list>
-            <mat-list-item> <app-twitter-auth [user]="user"></app-twitter-auth> </mat-list-item>
-            <mat-list-item> <app-google-auth [user]="user" ></app-google-auth> </mat-list-item>
-            <mat-list-item> <app-facebook-auth [user]="user" ></app-facebook-auth> </mat-list-item>
-        </mat-list>
-
-
-    </mat-card-content>
-</mat-card> 
-
-<app-logout [user]="user"></app-logout>
-
- -->
