--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -35,5 +35,10 @@
     </mat-grid-tile>
   </mat-grid-list>    
 
+
+    <mat-card>
+        <a mat-list-item routerLink="/terms-of-service" > Terms of service </a>
+        <a mat-list-item routerLink="/privacy-policy" > Privacy Policy </a>  
+    </mat-card>
 </div>
 
