add resume in spanish and english

--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -55,6 +55,9 @@
             </mat-expansion-panel-header>
         
             <div style="margin-bottom: 15px;">
+                <b>Web Developer en Instituto Pacífico S.A.C.</b> Develops modules to handle operations administrative of the company. The technologies that I use are Laravel, jQuery, RxJS. [feb 2018 - present]
+            </div>
+            <div style="margin-bottom: 15px;">
                 <b>Full Stack Engineer - PeruVe.com,</b> Develop a Job board and Currency Exchange Platform for Venezuelans in Perú. The main technologies that will be used are Angular 5, Firebase, Algolia, ExpressJS. [ene 2018 - present]
             </div>
             <div style="margin-bottom: 15px;">
@@ -159,6 +162,25 @@
       </mat-accordion>
   
     </mat-card-content>
+
+    <br>
+
+    <mat-card-content>
+        <div class="pdf-links">
+            <div>
+                <img src="https://res.cloudinary.com/peruve/image/upload/c_scale,h_50,q_auto:low/v1524663820/pdf_xdseqw.png" style="height: 50px;">
+            </div>
+            <div>
+                <ul>
+                    <li><a target="_blank" href="/assets/files/resume-in-english-25-4-2018.pdf">Download my resume in PDF (English)</a></li>
+                    <li><a target="_blank" href="/assets/files/resume-in-spanish-25-4-2018.pdf">Descargar mi resumen in PDF (Spanish - Español)</a></li>
+                </ul>        
+            </div>  
+        </div>
+    </mat-card-content>
+
+
+
     <mat-card-actions class="my-resume-actions">
       <a routerLink="/contact" routerLinkActive="active">
         <button mat-button class="get-in-touch-button">Get in touch!</button>
